--- a/styles/partials/_favourites.scss
+++ b/styles/partials/_favourites.scss
@@ -10,6 +10,9 @@
 		font-family: $title_font;
 		color: $main_color;
 		font-size: 1.25rem;
+		body.dark & {
+			color: #fff;
+		}
 	}
 	&__empty {
 		margin-top: 1.25rem;
@@ -34,6 +37,14 @@
 		&:hover {
 			background-color: $main_color;
 			color: white;
+		}
+		body.dark & {
+			border: 2px solid #fff;
+			color: #fff;
+			&:hover {
+				background-color: $backgroundBlack;
+				color: white;
+			}
 		}
 	}
 }
