--- a/styles/partials/_maxGifs.scss
+++ b/styles/partials/_maxGifs.scss
@@ -11,6 +11,9 @@
 	width: 100%;
 	top: 0;
 	left: 0;
+	body.dark & {
+		background-color: rgba(55, 56, 60, 0.9);
+	}
 }
 .maximizedGifs {
 	display: flex;
