--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -28,5 +28,6 @@ $lightGray: #9cafc3;
 $desktop2: 1280px;
 $genericLaptop: 1530px;
 
+/* Dark Mode Styles */
 $backgroundBlack: #222326;
 $backgroundDark: #37383c;
